fix overflow issue where tool-tip was being cut off on the comparison new view

--- a/app/assets/stylesheets/comparisons.scss
+++ b/app/assets/stylesheets/comparisons.scss
@@ -3,11 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 tbody {
-  display: block;
+  text-align: left
 }
 
 .comparison-table > tbody > tr > td {
   width: 250px;
   min-width: 200px;
   text-align: center;
+  // overflow: hidden;
 }
